// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TagInput should renders correctly 1`] = `
<DocumentFragment>
  .cache-ymc80m-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-h4to4s-TagInputContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  background-color: #ffffff;
  padding: calc(12px - 1px) 16px;
  cursor: text;
  background: #ffffff;
  border: 1px solid #d9dadd;
  border-radius: 4px;
}

.cache-h4to4s-TagInputContainer:focus-within {
  border-color: #792dd4;
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.cache-h4to4s-TagInputContainer[data-success='true'] {
  border-color: #22674e;
}

.cache-h4to4s-TagInputContainer[data-error='true'] {
  border-color: #b3144d;
}

.cache-h4to4s-TagInputContainer:hover {
  border-color: #792dd4;
}

.cache-h4to4s-TagInputContainer[data-readonly='true'] {
  border-color: #d9dadd;
  background: #f9f9fa;
}

.cache-h4to4s-TagInputContainer[data-disabled='true'] {
  border-color: #e9eaeb;
  background: #f3f3f4;
  cursor: not-allowed;
}

.cache-bi6n77-DataContainer {
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 8px;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.cache-45doph-StyledInput {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  font-size: 16px;
  background: inherit;
  color: #3f4250;
  border: none;
  outline: none;
  height: 100%;
}

.cache-45doph-StyledInput::-webkit-input-placeholder {
  color: #727683;
}

.cache-45doph-StyledInput::-moz-placeholder {
  color: #727683;
}

.cache-45doph-StyledInput:-ms-input-placeholder {
  color: #727683;
}

.cache-45doph-StyledInput::placeholder {
  color: #727683;
}

<div
    class="cache-ymc80m-Stack ehpbis70"
  >
    <div>
      <div
        class="cache-h4to4s-TagInputContainer ea7vc6o3"
        data-disabled="false"
        data-error="false"
        data-readonly="false"
        data-success="false"
      >
        <div
          class="cache-bi6n77-DataContainer ea7vc6o2"
        >
          <input
            class="cache-45doph-StyledInput ea7vc6o0"
            id=":r0:"
            type="text"
            value=""
          />
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`TagInput should renders correctly disabled 1`] = `
<DocumentFragment>
  .cache-ymc80m-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-h4to4s-TagInputContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  background-color: #ffffff;
  padding: calc(12px - 1px) 16px;
  cursor: text;
  background: #ffffff;
  border: 1px solid #d9dadd;
  border-radius: 4px;
}

.cache-h4to4s-TagInputContainer:focus-within {
  border-color: #792dd4;
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.cache-h4to4s-TagInputContainer[data-success='true'] {
  border-color: #22674e;
}

.cache-h4to4s-TagInputContainer[data-error='true'] {
  border-color: #b3144d;
}

.cache-h4to4s-TagInputContainer:hover {
  border-color: #792dd4;
}

.cache-h4to4s-TagInputContainer[data-readonly='true'] {
  border-color: #d9dadd;
  background: #f9f9fa;
}

.cache-h4to4s-TagInputContainer[data-disabled='true'] {
  border-color: #e9eaeb;
  background: #f3f3f4;
  cursor: not-allowed;
}

.cache-bi6n77-DataContainer {
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 8px;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

<div
    class="cache-ymc80m-Stack ehpbis70"
  >
    <div>
      <div
        class="cache-h4to4s-TagInputContainer ea7vc6o3"
        data-disabled="true"
        data-error="false"
        data-readonly="false"
        data-success="false"
      >
        <div
          class="cache-bi6n77-DataContainer ea7vc6o2"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`TagInput should renders correctly readOnly 1`] = `
<DocumentFragment>
  .cache-ymc80m-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-h4to4s-TagInputContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  background-color: #ffffff;
  padding: calc(12px - 1px) 16px;
  cursor: text;
  background: #ffffff;
  border: 1px solid #d9dadd;
  border-radius: 4px;
}

.cache-h4to4s-TagInputContainer:focus-within {
  border-color: #792dd4;
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.cache-h4to4s-TagInputContainer[data-success='true'] {
  border-color: #22674e;
}

.cache-h4to4s-TagInputContainer[data-error='true'] {
  border-color: #b3144d;
}

.cache-h4to4s-TagInputContainer:hover {
  border-color: #792dd4;
}

.cache-h4to4s-TagInputContainer[data-readonly='true'] {
  border-color: #d9dadd;
  background: #f9f9fa;
}

.cache-h4to4s-TagInputContainer[data-disabled='true'] {
  border-color: #e9eaeb;
  background: #f3f3f4;
  cursor: not-allowed;
}

.cache-bi6n77-DataContainer {
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 8px;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.cache-45doph-StyledInput {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  font-size: 16px;
  background: inherit;
  color: #3f4250;
  border: none;
  outline: none;
  height: 100%;
}

.cache-45doph-StyledInput::-webkit-input-placeholder {
  color: #727683;
}

.cache-45doph-StyledInput::-moz-placeholder {
  color: #727683;
}

.cache-45doph-StyledInput:-ms-input-placeholder {
  color: #727683;
}

.cache-45doph-StyledInput::placeholder {
  color: #727683;
}

<div
    class="cache-ymc80m-Stack ehpbis70"
  >
    <div>
      <div
        class="cache-h4to4s-TagInputContainer ea7vc6o3"
        data-disabled="false"
        data-error="false"
        data-readonly="true"
        data-success="false"
      >
        <div
          class="cache-bi6n77-DataContainer ea7vc6o2"
        >
          <input
            class="cache-45doph-StyledInput ea7vc6o0"
            id=":r4:"
            readonly=""
            type="text"
            value=""
          />
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`TagInput should renders correctly with error 1`] = `
<DocumentFragment>
  .cache-ymc80m-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-h4to4s-TagInputContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  background-color: #ffffff;
  padding: calc(12px - 1px) 16px;
  cursor: text;
  background: #ffffff;
  border: 1px solid #d9dadd;
  border-radius: 4px;
}

.cache-h4to4s-TagInputContainer:focus-within {
  border-color: #792dd4;
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.cache-h4to4s-TagInputContainer[data-success='true'] {
  border-color: #22674e;
}

.cache-h4to4s-TagInputContainer[data-error='true'] {
  border-color: #b3144d;
}

.cache-h4to4s-TagInputContainer:hover {
  border-color: #792dd4;
}

.cache-h4to4s-TagInputContainer[data-readonly='true'] {
  border-color: #d9dadd;
  background: #f9f9fa;
}

.cache-h4to4s-TagInputContainer[data-disabled='true'] {
  border-color: #e9eaeb;
  background: #f3f3f4;
  cursor: not-allowed;
}

.cache-bi6n77-DataContainer {
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 8px;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.cache-45doph-StyledInput {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  font-size: 16px;
  background: inherit;
  color: #3f4250;
  border: none;
  outline: none;
  height: 100%;
}

.cache-45doph-StyledInput::-webkit-input-placeholder {
  color: #727683;
}

.cache-45doph-StyledInput::-moz-placeholder {
  color: #727683;
}

.cache-45doph-StyledInput:-ms-input-placeholder {
  color: #727683;
}

.cache-45doph-StyledInput::placeholder {
  color: #727683;
}

.cache-16a972i-StateContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 8px;
}

.cache-9kudic-StyledIcon-sizeStyles {
  vertical-align: middle;
  fill: #b3144d;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

.cache-9kudic-StyledIcon-sizeStyles .fillStroke {
  stroke: #b3144d;
  fill: none;
}

.cache-vdlwt8-StyledText {
  color: #b3144d;
  font-size: 12px;
  font-family: Inter,Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 16px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
    class="cache-ymc80m-Stack ehpbis70"
  >
    <div>
      <div
        class="cache-h4to4s-TagInputContainer ea7vc6o3"
        data-disabled="false"
        data-error="true"
        data-readonly="false"
        data-success="false"
      >
        <div
          class="cache-bi6n77-DataContainer ea7vc6o2"
        >
          <input
            class="cache-45doph-StyledInput ea7vc6o0"
            id=":r6:"
            type="text"
            value=""
          />
        </div>
        <div
          class="cache-16a972i-StateContainer ea7vc6o1"
        >
          <svg
            class="cache-9kudic-StyledIcon-sizeStyles e1gt4cfo0"
            viewBox="0 0 16 16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M8 15A7 7 0 1 0 8 1a7 7 0 0 0 0 14M8 4a.75.75 0 0 1 .75.75v3a.75.75 0 0 1-1.5 0v-3A.75.75 0 0 1 8 4m0 8a1 1 0 1 0 0-2 1 1 0 0 0 0 2"
              fill-rule="evenodd"
            />
          </svg>
        </div>
      </div>
    </div>
    <span
      class="cache-vdlwt8-StyledText e13y3mga0"
    >
      This is an error
    </span>
  </div>
</DocumentFragment>
`;

exports[`TagInput should renders correctly with placeholder 1`] = `
<DocumentFragment>
  .cache-ymc80m-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-h4to4s-TagInputContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  background-color: #ffffff;
  padding: calc(12px - 1px) 16px;
  cursor: text;
  background: #ffffff;
  border: 1px solid #d9dadd;
  border-radius: 4px;
}

.cache-h4to4s-TagInputContainer:focus-within {
  border-color: #792dd4;
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.cache-h4to4s-TagInputContainer[data-success='true'] {
  border-color: #22674e;
}

.cache-h4to4s-TagInputContainer[data-error='true'] {
  border-color: #b3144d;
}

.cache-h4to4s-TagInputContainer:hover {
  border-color: #792dd4;
}

.cache-h4to4s-TagInputContainer[data-readonly='true'] {
  border-color: #d9dadd;
  background: #f9f9fa;
}

.cache-h4to4s-TagInputContainer[data-disabled='true'] {
  border-color: #e9eaeb;
  background: #f3f3f4;
  cursor: not-allowed;
}

.cache-bi6n77-DataContainer {
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 8px;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.cache-45doph-StyledInput {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  font-size: 16px;
  background: inherit;
  color: #3f4250;
  border: none;
  outline: none;
  height: 100%;
}

.cache-45doph-StyledInput::-webkit-input-placeholder {
  color: #727683;
}

.cache-45doph-StyledInput::-moz-placeholder {
  color: #727683;
}

.cache-45doph-StyledInput:-ms-input-placeholder {
  color: #727683;
}

.cache-45doph-StyledInput::placeholder {
  color: #727683;
}

<div
    class="cache-ymc80m-Stack ehpbis70"
  >
    <div>
      <div
        class="cache-h4to4s-TagInputContainer ea7vc6o3"
        data-disabled="false"
        data-error="false"
        data-readonly="false"
        data-success="false"
      >
        <div
          class="cache-bi6n77-DataContainer ea7vc6o2"
        >
          <input
            class="cache-45doph-StyledInput ea7vc6o0"
            id=":rc:"
            placeholder="Enter a value here"
            type="text"
            value=""
          />
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`TagInput should renders correctly with some tags 1`] = `
<DocumentFragment>
  .cache-ymc80m-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-h4to4s-TagInputContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  background-color: #ffffff;
  padding: calc(12px - 1px) 16px;
  cursor: text;
  background: #ffffff;
  border: 1px solid #d9dadd;
  border-radius: 4px;
}

.cache-h4to4s-TagInputContainer:focus-within {
  border-color: #792dd4;
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.cache-h4to4s-TagInputContainer[data-success='true'] {
  border-color: #22674e;
}

.cache-h4to4s-TagInputContainer[data-error='true'] {
  border-color: #b3144d;
}

.cache-h4to4s-TagInputContainer:hover {
  border-color: #792dd4;
}

.cache-h4to4s-TagInputContainer[data-readonly='true'] {
  border-color: #d9dadd;
  background: #f9f9fa;
}

.cache-h4to4s-TagInputContainer[data-disabled='true'] {
  border-color: #e9eaeb;
  background: #f3f3f4;
  cursor: not-allowed;
}

.cache-bi6n77-DataContainer {
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 8px;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.cache-1anauza-StyledContainer {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  white-space: nowrap;
  border-radius: 4px;
  padding: 0 8px;
  gap: 8px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: 24px;
  color: #3f4250;
  background: #ffffff;
  border: solid 1px #d9dadd;
}

.cache-1olt749-StyledText-StyledText {
  font-size: 12px;
  font-family: Inter,Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 16px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
  max-width: 232px;
}

.cache-sitm2s-StyledGhostButton-StyledCloseButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 32px;
  padding: 0 8px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  box-sizing: border-box;
  width: 32px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 20px;
  paragraph-spacing: 0;
  text-case: none;
  background: none;
  border: none;
  color: #3f4250;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
  padding: 2px;
}

.cache-sitm2s-StyledGhostButton-StyledCloseButton:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-sitm2s-StyledGhostButton-StyledCloseButton:active {
  box-shadow: 0px 0px 0px 3px #151a2d5c;
}

.cache-sitm2s-StyledGhostButton-StyledCloseButton:hover,
.cache-sitm2s-StyledGhostButton-StyledCloseButton:active {
  background: #e9eaeb;
  color: #222638;
}

.cache-1dnbbhk-StyledIcon-sizeStyles {
  vertical-align: middle;
  fill: currentColor;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

.cache-1dnbbhk-StyledIcon-sizeStyles .fillStroke {
  stroke: currentColor;
  fill: none;
}

.cache-45doph-StyledInput {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  font-size: 16px;
  background: inherit;
  color: #3f4250;
  border: none;
  outline: none;
  height: 100%;
}

.cache-45doph-StyledInput::-webkit-input-placeholder {
  color: #727683;
}

.cache-45doph-StyledInput::-moz-placeholder {
  color: #727683;
}

.cache-45doph-StyledInput:-ms-input-placeholder {
  color: #727683;
}

.cache-45doph-StyledInput::placeholder {
  color: #727683;
}

<div
    class="cache-ymc80m-Stack ehpbis70"
  >
    <div>
      <div
        class="cache-h4to4s-TagInputContainer ea7vc6o3"
        data-disabled="false"
        data-error="false"
        data-readonly="false"
        data-success="false"
      >
        <div
          class="cache-bi6n77-DataContainer ea7vc6o2"
        >
          <span
            class="cache-1anauza-StyledContainer el6733p2"
          >
            <span
              class="el6733p1 cache-1olt749-StyledText-StyledText e13y3mga0"
            >
              hello
            </span>
            <button
              aria-label="Close tag"
              class="el6733p0 cache-sitm2s-StyledGhostButton-StyledCloseButton e112qvla0"
              data-testid="close-tag"
              type="button"
            >
              <svg
                class="cache-1dnbbhk-StyledIcon-sizeStyles e1gt4cfo0"
                viewBox="0 0 16 16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M5.28 4.22a.75.75 0 0 0-1.06 1.06L6.94 8l-2.72 2.72a.75.75 0 1 0 1.06 1.06L8 9.06l2.72 2.72a.75.75 0 1 0 1.06-1.06L9.06 8l2.72-2.72a.75.75 0 0 0-1.06-1.06L8 6.94z"
                />
              </svg>
            </button>
          </span>
          <span
            class="cache-1anauza-StyledContainer el6733p2"
          >
            <span
              class="el6733p1 cache-1olt749-StyledText-StyledText e13y3mga0"
            >
              world
            </span>
            <button
              aria-label="Close tag"
              class="el6733p0 cache-sitm2s-StyledGhostButton-StyledCloseButton e112qvla0"
              data-testid="close-tag"
              type="button"
            >
              <svg
                class="cache-1dnbbhk-StyledIcon-sizeStyles e1gt4cfo0"
                viewBox="0 0 16 16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M5.28 4.22a.75.75 0 0 0-1.06 1.06L6.94 8l-2.72 2.72a.75.75 0 1 0 1.06 1.06L8 9.06l2.72 2.72a.75.75 0 1 0 1.06-1.06L9.06 8l2.72-2.72a.75.75 0 0 0-1.06-1.06L8 6.94z"
                />
              </svg>
            </button>
          </span>
          <input
            aria-label="radio"
            class="cache-45doph-StyledInput ea7vc6o0"
            id=":re:"
            name="radio"
            placeholder=""
            type="text"
            value=""
          />
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`TagInput should renders correctly with some tags objects 1`] = `
<DocumentFragment>
  .cache-ymc80m-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-h4to4s-TagInputContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  background-color: #ffffff;
  padding: calc(12px - 1px) 16px;
  cursor: text;
  background: #ffffff;
  border: 1px solid #d9dadd;
  border-radius: 4px;
}

.cache-h4to4s-TagInputContainer:focus-within {
  border-color: #792dd4;
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.cache-h4to4s-TagInputContainer[data-success='true'] {
  border-color: #22674e;
}

.cache-h4to4s-TagInputContainer[data-error='true'] {
  border-color: #b3144d;
}

.cache-h4to4s-TagInputContainer:hover {
  border-color: #792dd4;
}

.cache-h4to4s-TagInputContainer[data-readonly='true'] {
  border-color: #d9dadd;
  background: #f9f9fa;
}

.cache-h4to4s-TagInputContainer[data-disabled='true'] {
  border-color: #e9eaeb;
  background: #f3f3f4;
  cursor: not-allowed;
}

.cache-bi6n77-DataContainer {
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 8px;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.cache-1anauza-StyledContainer {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  white-space: nowrap;
  border-radius: 4px;
  padding: 0 8px;
  gap: 8px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: 24px;
  color: #3f4250;
  background: #ffffff;
  border: solid 1px #d9dadd;
}

.cache-1olt749-StyledText-StyledText {
  font-size: 12px;
  font-family: Inter,Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 16px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
  max-width: 232px;
}

.cache-sitm2s-StyledGhostButton-StyledCloseButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 32px;
  padding: 0 8px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  box-sizing: border-box;
  width: 32px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 20px;
  paragraph-spacing: 0;
  text-case: none;
  background: none;
  border: none;
  color: #3f4250;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
  padding: 2px;
}

.cache-sitm2s-StyledGhostButton-StyledCloseButton:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-sitm2s-StyledGhostButton-StyledCloseButton:active {
  box-shadow: 0px 0px 0px 3px #151a2d5c;
}

.cache-sitm2s-StyledGhostButton-StyledCloseButton:hover,
.cache-sitm2s-StyledGhostButton-StyledCloseButton:active {
  background: #e9eaeb;
  color: #222638;
}

.cache-1dnbbhk-StyledIcon-sizeStyles {
  vertical-align: middle;
  fill: currentColor;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

.cache-1dnbbhk-StyledIcon-sizeStyles .fillStroke {
  stroke: currentColor;
  fill: none;
}

.cache-45doph-StyledInput {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  font-size: 16px;
  background: inherit;
  color: #3f4250;
  border: none;
  outline: none;
  height: 100%;
}

.cache-45doph-StyledInput::-webkit-input-placeholder {
  color: #727683;
}

.cache-45doph-StyledInput::-moz-placeholder {
  color: #727683;
}

.cache-45doph-StyledInput:-ms-input-placeholder {
  color: #727683;
}

.cache-45doph-StyledInput::placeholder {
  color: #727683;
}

<div
    class="cache-ymc80m-Stack ehpbis70"
  >
    <div>
      <div
        class="cache-h4to4s-TagInputContainer ea7vc6o3"
        data-disabled="false"
        data-error="false"
        data-readonly="false"
        data-success="false"
      >
        <div
          class="cache-bi6n77-DataContainer ea7vc6o2"
        >
          <span
            class="cache-1anauza-StyledContainer el6733p2"
          >
            <span
              class="el6733p1 cache-1olt749-StyledText-StyledText e13y3mga0"
            >
              hello
            </span>
            <button
              aria-label="Close tag"
              class="el6733p0 cache-sitm2s-StyledGhostButton-StyledCloseButton e112qvla0"
              data-testid="close-tag"
              type="button"
            >
              <svg
                class="cache-1dnbbhk-StyledIcon-sizeStyles e1gt4cfo0"
                viewBox="0 0 16 16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M5.28 4.22a.75.75 0 0 0-1.06 1.06L6.94 8l-2.72 2.72a.75.75 0 1 0 1.06 1.06L8 9.06l2.72 2.72a.75.75 0 1 0 1.06-1.06L9.06 8l2.72-2.72a.75.75 0 0 0-1.06-1.06L8 6.94z"
                />
              </svg>
            </button>
          </span>
          <span
            class="cache-1anauza-StyledContainer el6733p2"
          >
            <span
              class="el6733p1 cache-1olt749-StyledText-StyledText e13y3mga0"
            >
              world
            </span>
            <button
              aria-label="Close tag"
              class="el6733p0 cache-sitm2s-StyledGhostButton-StyledCloseButton e112qvla0"
              data-testid="close-tag"
              type="button"
            >
              <svg
                class="cache-1dnbbhk-StyledIcon-sizeStyles e1gt4cfo0"
                viewBox="0 0 16 16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M5.28 4.22a.75.75 0 0 0-1.06 1.06L6.94 8l-2.72 2.72a.75.75 0 1 0 1.06 1.06L8 9.06l2.72 2.72a.75.75 0 1 0 1.06-1.06L9.06 8l2.72-2.72a.75.75 0 0 0-1.06-1.06L8 6.94z"
                />
              </svg>
            </button>
          </span>
          <input
            aria-label="radio"
            class="cache-45doph-StyledInput ea7vc6o0"
            id=":rk:"
            name="radio"
            placeholder=""
            type="text"
            value=""
          />
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`TagInput should renders correctly with success 1`] = `
<DocumentFragment>
  .cache-ymc80m-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-h4to4s-TagInputContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  background-color: #ffffff;
  padding: calc(12px - 1px) 16px;
  cursor: text;
  background: #ffffff;
  border: 1px solid #d9dadd;
  border-radius: 4px;
}

.cache-h4to4s-TagInputContainer:focus-within {
  border-color: #792dd4;
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.cache-h4to4s-TagInputContainer[data-success='true'] {
  border-color: #22674e;
}

.cache-h4to4s-TagInputContainer[data-error='true'] {
  border-color: #b3144d;
}

.cache-h4to4s-TagInputContainer:hover {
  border-color: #792dd4;
}

.cache-h4to4s-TagInputContainer[data-readonly='true'] {
  border-color: #d9dadd;
  background: #f9f9fa;
}

.cache-h4to4s-TagInputContainer[data-disabled='true'] {
  border-color: #e9eaeb;
  background: #f3f3f4;
  cursor: not-allowed;
}

.cache-bi6n77-DataContainer {
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 8px;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.cache-45doph-StyledInput {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  font-size: 16px;
  background: inherit;
  color: #3f4250;
  border: none;
  outline: none;
  height: 100%;
}

.cache-45doph-StyledInput::-webkit-input-placeholder {
  color: #727683;
}

.cache-45doph-StyledInput::-moz-placeholder {
  color: #727683;
}

.cache-45doph-StyledInput:-ms-input-placeholder {
  color: #727683;
}

.cache-45doph-StyledInput::placeholder {
  color: #727683;
}

.cache-16a972i-StateContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 8px;
}

.cache-x49ond-StyledIcon-sizeStyles {
  vertical-align: middle;
  fill: #22674e;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

.cache-x49ond-StyledIcon-sizeStyles .fillStroke {
  stroke: #22674e;
  fill: none;
}

.cache-1n7fwv3-StyledText {
  color: #22674e;
  font-size: 12px;
  font-family: Inter,Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 16px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
    class="cache-ymc80m-Stack ehpbis70"
  >
    <div>
      <div
        class="cache-h4to4s-TagInputContainer ea7vc6o3"
        data-disabled="false"
        data-error="false"
        data-readonly="false"
        data-success="true"
      >
        <div
          class="cache-bi6n77-DataContainer ea7vc6o2"
        >
          <input
            class="cache-45doph-StyledInput ea7vc6o0"
            id=":r9:"
            type="text"
            value=""
          />
        </div>
        <div
          class="cache-16a972i-StateContainer ea7vc6o1"
        >
          <svg
            class="cache-x49ond-StyledIcon-sizeStyles e1gt4cfo0"
            viewBox="0 0 16 16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M8 15A7 7 0 1 0 8 1a7 7 0 0 0 0 14m3.844-8.791a.75.75 0 0 0-1.187-.918l-3.7 4.79-1.65-1.833a.75.75 0 1 0-1.114 1.004l2.25 2.5a.75.75 0 0 0 1.15-.043z"
              fill-rule="evenodd"
            />
          </svg>
        </div>
      </div>
    </div>
    <span
      class="cache-1n7fwv3-StyledText e13y3mga0"
    >
      This is a success
    </span>
  </div>
</DocumentFragment>
`;
